--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -33,7 +33,7 @@
                 <div class="container" id="s-<%=user.id%>"
                     style="box-shadow: 0 0 10px 1px #ccc; background-color: white;margin: 20px; border-radius: 10px; padding: 10px; display: flex; align-items: center; justify-content: space-around;">
                     <p
-                        style="width: 200px;text-align: center; color: #ebcb1c; border: 1px solid #ebcb1c; border-radius: 50%; width: 30px; height: 30px; display: flex; justify-content: center; align-items: center;">
+                        style=" text-align: center; color: #ebcb1c; border: 1px solid #ebcb1c; border-radius: 12px;padding: 3px; min-width: 30px; height: 30px; display: flex; justify-content: center; align-items: center;">
                         <%= user.id %>
                     </p>
                     <p style="width: 200px;text-align: center;" dir="ltr">
