--- a/views/search.ejs
+++ b/views/search.ejs
@@ -33,7 +33,8 @@
                 <form action="/search" method="post"
                     style="width: 60%; height: 70%; background-color: white; display: flex; flex-direction: column; justify-content: space-around; align-items: center;border-radius: 10px;">
                     <h1 style="font-size: 40px;">جستجو</h1>
-                    <input name="code" type="text" placeholder="کد" style="text-align: center;font-size: 30px;">
+                    <input required name="code" type="text" placeholder="کد"
+                        style="text-align: center;font-size: 30px;">
                     <button type="submit" style="cursor: pointer;">ثبت</button>
                 </form>
 
