--- a/views/search.ejs
+++ b/views/search.ejs
@@ -17,7 +17,7 @@
             <div style="display: flex; align-items: center; ">
                 <p
                     style="margin-left: 30px; background-color: #ebcb1c; color: white; padding: 5px 10px;border-radius: 20px;">
-                    <%= users.length %> نفر
+                    <%= convert.toPersian(users.length) %> نفر
                 </p>
                 <h1 style="color: #ebcb1c">قـــــرعـــــه‌کـــــشـــــی</h1>
                 <a href="/" style="margin-right: 30px;">خانه</a>
